--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -1,7 +1,7 @@
 .form-section {
     min-height: 80vh;
     @include flex(center, center, row);
-    margin-top: 3rem;
+    margin: 5rem 0rem;
     form {
         padding: 3rem 10rem;
         box-shadow: 0px 10px 10px rgba(#000000, 0.2),
