--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -1,6 +1,7 @@
 .main-head {
-    width: 95%;
-    margin: 0 0 0 auto;
+    width: 100%;
+    padding-left: 5%;
+    box-shadow: 0px 10px 10px rgba(#000000, 0.2);
 }
 
 nav {
