--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -5,6 +5,7 @@
     @include flex(space-between, center, row);
     flex-wrap: wrap;
     text-align: center;
+    margin-bottom: 5rem;
     h2 {
         margin: 4rem;
     }
